fixed horizontal scrolling on mobile

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3,6 +3,8 @@
 @import url("components.css");
 @import url("responsive.css");
 
+
+
 :root {
   scroll-behavior: smooth;
   font-size: 62.5%;
@@ -112,7 +114,10 @@ body {
     sans-serif;
   line-height: 1;
   font-weight: 400;
-  overflow-x: hidden !important;
+}
+
+html {
+overflow-x: hidden !important;
 }
 
 .grid {
@@ -197,4 +202,5 @@ section:not(:first-of-type, .testimonials-section) {
     rotate: 0deg;
   }
 }
+
 
